--- a/rocketseat/propriedadesCss/headerMenuNavigation/index.html
+++ b/rocketseat/propriedadesCss/headerMenuNavigation/index.html
@@ -7,17 +7,17 @@
     <title>Document</title>
     <link rel="stylesheet" href="./style.css"/>
 </head>
-    <header>
+    <Header>
         <nav>
-            <a href="">LOGO</a>
+            <a href="#">LOGO</a>
             <ul>
                 <li>HOME</li>
                 <li>ABOUT</li>
                 <li>SERVICES</li>
                 <li>TESTIMONIALS</li>
-                <button>CONTACT</button>
+                <li>CONTACT</li>
             </ul>
         </nav>
-    </header>
+    </Header>
 </body>
 </html>
